@@ -16,7 +16,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 
 @Component
 @RequiredArgsConstructor
@@ -38,8 +37,15 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         final String jwt = authHeader.substring(7);
 
-        if (jwtService.isTokenValido(jwt)) {
-            String email = jwtService.extrairEmail(jwt);
+        String email;
+        try {
+            email = jwtService.extrairEmail(jwt);
+        } catch (io.jsonwebtoken.JwtException | IllegalArgumentException ex) {
+            SecurityContextHolder.clearContext();
+            filterChain.doFilter(request, response);
+            return;
+        }
+        if (email != null) {
 
             if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
                 Usuario usuario = usuarioRepository.findByEmail(email).orElse(null);
@@ -49,11 +55,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
                 if (usuario != null && Boolean.TRUE.equals(usuario.getAtivo()) && !isBloqueado) {
                     UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                            usuario, null, Collections.emptyList());
+                            usuario, null, java.util.List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority(
+                                    "ROLE_" + usuario.getRole().name())));
                     authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                     SecurityContextHolder.getContext().setAuthentication(authToken);
                 } else {
-                    System.err.println("[SECURITY] Tentativa de acesso com conta bloqueada/inativa: " + email);
+                    SecurityContextHolder.clearContext();
                 }
             }
         }
